# OpenFermion

./: .editorconfig  .geminiignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .hadolint.yaml  .jsonlintrc  .jsonlintrc.yaml  .markdownlintrc  .osv-scanner.toml  .pre-commit-config.yaml  .pylintrc  .shellcheckrc  .travis.yml  .yamllint.yaml  .zenodo.json  AUTHORS  CITATION.cff  CONTRIBUTING.md  FEATURES.rst  MANIFEST.in  NOTICE  README.md  README.rst  SUPPORT.md  conftest.py  pyproject.toml  requirements.txt  setup.py  test.py
.gemini/: config.yaml
.github/: SECURITY.md  actionlint.yaml  dependabot.yaml
.github/ISSUE_TEMPLATE/: 1-bug-report.md  1-bug-report.yml  2-feature-request.md  2-feature-request.yml  3-question.md  3-task.md  4-task.md  config.yml
.github/problem-matchers/: README.md  hadolint.json  jsonlint.json
.github/workflows/: _nightly-cirq-test.yaml  ci.yaml  ci.yml  codeql.yaml  dependabot-pr-cleaner.yaml  dependabot-pr-trimmer.yaml  first-interaction.yaml  nightly-pytest.yaml  nightly-pytest.yml  nightly-tests.yaml  nightly.yaml  nightly.yml  ossf-scorecard.yaml  osv-scanner.yaml  pr-labeler.yaml  regenerate-env-files.yaml  save-repo-stats.yaml  scorecard-scanner.yaml  scorecard.yaml  weekly.yaml
check/: all  format-incremental  mypy  nbformat  pylint  pylint-changed-files  pytest  pytest-and-incremental-coverage  shellcheck
cloud_library/: HF_diatomic_sto-3g  H_rings_sto-3g_0.7414  README.md  diazene.txt  k-acene.txt
dev_tools/: __init__.py  apache-license-header.txt  check_incremental_coverage_annotations.py  env_tools.py  git_env_tools.py  github_repository.py  incremental_coverage.py  incremental_coverage_test.py  prepared_env.py  prepared_env_security_test.py  shell_tools.py  shell_tools_test.py
dev_tools/ci/: size-labeler.sh
dev_tools/conf/: .coveragerc  .pylintrc  mypy.ini  pip-list-dev-tools.txt  pytest.ini
dev_tools/docs/: build_api_docs.py
dev_tools/docs/examples/: _examples_test.py  performance_benchmarks.py
dev_tools/docs/sphinx/: Makefile  conf.py  make.bat  openfermion.rst
dev_tools/packaging/: produce-package.sh  publish-dev-package.sh  verify-published-package.sh
dev_tools/pip-compile-requirements/: Dockerfile  do-it.sh  generate-requirements.in.py  optional-requirements.txt  requirements-py36.txt  requirements-py37.txt  requirements-py38.txt  requirements-py39.txt  requirements.in  run-pip-compile-with-docker.sh
dev_tools/requirements/: Dockerfile  create-env-files.sh  dev.env.txt  format.env.txt  mypy.env.txt  pylint.env.txt  pytest.env.txt  re-pip-compile-in-docker.sh  re-pip-compile.sh  resource_estimates.env.txt  run-pip-compiles.py  runtime.env.txt
dev_tools/requirements/envs/: dev.env.txt  format.env.txt  mypy.env.txt  pip-tools.env.txt  pylint.env.txt  pytest-extra.env.txt  pytest.env.txt  shellcheck.env.txt
dev_tools/requirements/max_compat/: dev.env.txt  pytest-max-compat.env.txt
docker/: Dockerfile  README.md  README.rst  dockerfile
docs/: _book.yaml  _index.yaml  conf.py  examples.rst  index.rst  install.md  intro.rst  openfermion.rst  other_projects.md  overview.md  projects.md
docs/fqe/: index.md
docs/fqe/guide/: introduction.ipynb
docs/fqe/tutorials/: diagonal_coulomb_evolution.ipynb  fermi_hubbard.ipynb  fqe_vs_openfermion_quadratic_hamiltonians.ipynb  hamiltonian_time_evolution_and_expectation_estimation.ipynb  random_wavefunction
docs/tutorials/: binary_code_transforms.ipynb  bosonic_operators.ipynb  circuits_1_basis_change.ipynb  circuits_2_diagonal_coulomb_trotter.ipynb  circuits_3_arbitrary_basis_trotter.ipynb  intro_to_chemistry.ipynb  intro_to_openfermion.ipynb  intro_workshop_exercises.ipynb  jordan_wigner_and_bravyi_kitaev_transforms.ipynb  tutorial-requirements.txt
examples/: README.md  _examples_test.py  aQa_tutorial_2_Cirq.ipynb  aQa_tutorial_3_VQE.ipynb  aQa_tutorial_4_QPE.ipynb  aQa_tutorial_5_OpenFermion.ipynb  aQa_tutorial_6_Tomography.ipynb  aQa_tutorial_7_Fermion_to_qubit_transformations.ipynb  bayesian_estimator_tutorial.ipynb  binary_code_transform_demo.ipynb  binary_code_transforms_demo.ipynb  bosonic_operator_tutorial.ipynb  examples_test.py  givens_rotations.ipynb  jordan_wigner_and_bravyi_kitaev_transforms.ipynb  openfermion_demo.ipynb  openfermion_tutorial.ipynb  performance_benchmarks.py  requirements.txt  transforms.ipynb  tutorials-requirements.txt
examples/data/: H2_sto-3g_singlet_1.2.hdf5  H2_sto-3g_singlet_1.4.hdf5  H2_sto-3g_singlet_2.6.hdf5  H2_sto-3g_singlet_2.8.hdf5
openfermion/: __init__.py  _compat.py  _version.py  config.py  py.typed
openfermion/chem/: __init__.py  chemical_series_test.py
openfermion/circuits/: lcu_util.py  unitary_cc.py  unitary_cc_test.py
openfermion/circuits/gates/: common_gates_test.py  fermionic_simulation.py
openfermion/circuits/primitives/: bogoliubov_transform_test.py  optimal_givens_decomposition_test.py
openfermion/circuits/trotter/: __init__.py  hubbard_trotter_error_test.py  low_depth_trotter_error_test.py
openfermion/hamiltonians/: general_hubbard_test.py  hartree_fock_test.py  hubbard.py  jellium.py  jellium_hf_state.py  jellium_test.py  plane_wave_hamiltonian.py  special_operators.py
openfermion/linalg/: erpa.py  linear_qubit_operator_test.py  sparse_tools.py  wedge_product.py
openfermion/measurements/: __init__.py  equality_constraint_projection_test.py  get_interaction_rdm.py  prony_test.py  rdm_equality_constraints.py
openfermion/ops/operators/: binary_polynomial.py  boson_operator.py  fermion_operator.py  ising_operator_test.py  (+2 more)
openfermion/testing/: random.py
openfermion/transforms/: __init__.py
openfermion/utils/: __init__.py  commutator_diagonal_coulomb_operator.py  commutators.py  lattice.py  operator_utils.py
profiling/: performance_benchmarks.py  performance_benchmarks_test.py
quantumlib/OpenFermion/: README.md
rtd_docs/: 404.md  __init__.py  conf.py  index.md
rtd_docs/_templates/: layout.html
src/openfermion/: __init__.py  _compat.py  _compat_test.py  _version.py  config.py  config_test.py  conftest.py
(+836 files in other folders)
