# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Note: there are three types of dependencies listed in this file:
#
# [build-system].requires: packages needed by the build backend. Not stored in
# package metadata.
#
# [project].dependencies: core runtime packages (install_requires). Stored in
# package metadata and installed with `pip install openfermion`.
#
# [dependency-groups].dev: development tools for tests, linters, and packaging.
# Install with `uv sync --group dev` or `pip install --group dev` (PEP 735).
# Locked CI environments are still generated under dev_tools/requirements/envs/
# via dev_tools/requirements/create-env-files.sh.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=78.1.1", "wheel"]

[project]
name = "openfermion"
description = "The electronic structure package for quantum computers."
readme = {file = "README.md", content-type = "text/markdown"}
license = "Apache-2.0"
authors = [
    {name = "The OpenFermion Developers", email = "openfermion-dev@googlegroups.com"},
]
maintainers = [
    {name = "Google Quantum AI open-source maintainers", email = "quantum-oss-maintainers@google.com"},
]
requires-python = ">=3.10.0"
dynamic = ["version", "dependencies", "optional-dependencies"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Quantum Computing",
]
keywords = [
    "algorithms",
    "api",
    "application programming interface",
    "chemistry",
    "cirq",
    "electronic structure",
    "fermion",
    "fermionic systems",
    "google quantum",
    "google",
    "hamiltonians",
    "high performance",
    "nisq",
    "noisy intermediate-scale quantum",
    "python",
    "quantum algorithms",
    "quantum chemistry",
    "quantum circuit simulator",
    "quantum circuit",
    "quantum computer simulator",
    "quantum computing",
    "quantum development kit",
    "quantum programming language",
    "quantum programming",
    "quantum simulation",
    "quantum",
    "qubit hamiltonians",
    "qubit",
    "sdk",
    "simulation",
    "software development kit",
]

[project.urls]
Homepage = "https://quantumai.google/openfermion"
Documentation = "https://quantumai.google/openfermion"
Source = "https://github.com/quantumlib/OpenFermion"

[dependency-groups]
# Development dependencies. Keep in sync with dev_tools/requirements/deps/*.txt.
dev = [
    # Formatting and linting.
    "black",
    "mypy",
    "pandas-stubs",
    "pylint~=3.3",
    "types-networkx",
    "types-requests",
    "types-setuptools",

    # Testing.
    "nbformat",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-randomly",
    "pytest-retry",
    "pytest-xdist",
    "tensorflow-docs",

    # Packaging and requirements regeneration.
    "build",
    "setuptools",
    "shellcheck-py~=0.11.0",
    "twine",
    "uv",
    "virtualenv",
    "wheel",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
openfermion = [
    "resource_estimates/integrals/*.h5",
    "testing/*.npy",
    "testing/*.hdf5",
    "testing/*.data",
    "testing/*.txt",
]

[tool.setuptools.dynamic]
version = {attr = "openfermion._version.__version__"}
dependencies = {file = ["dev_tools/requirements/deps/runtime.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
resources = {file = ["dev_tools/requirements/deps/resource_estimates_runtime.txt"]}

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.coverage.run]
# Speed up pytest-cov on Python 3.12+ by enabling sys.monitoring if possible.
core = "sysmon"
disable_warnings = ["no-sysmon"]

[tool.pytest.ini_options]
markers = [
    """slow: marks tests as slow (deselect with '-m "not slow"')""",
]
filterwarnings = [
    "ignore:Skipped assert_qasm_is_consistent_with_unitary because qiskit.*:UserWarning",
]

[tool.mypy]
implicit_optional = true
# TODO: this is temporary for 1.7.0 release. Remove this & fix the errors.
ignore_errors = true

[[tool.mypy.overrides]]
module = "__main__"
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "_pytest.*",
    "absl",
    "apiclient.*",
    "h5py",
    "numpy.*",
    "pubchempy",
    "pybtas",
    "pyscf.*",
    "pytest.*",
    "scipy.*",
    "tensorflow_docs",
]
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sympy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tensorflow_docs.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "deprecation"
follow_untyped_imports = true

[tool.uv.pip]
universal = true
generate-hashes = true
custom-compile-command = "dev_tools/requirements/create-env-files.sh"
